--- a/xenoflows/xflow_test.yml
+++ b/xenoflows/xflow_test.yml
@@ -1,7 +1,21 @@
 ---
 xf:
+  globals:
+    glb_test: 1
   xenodes:
     x1:
       path: echo_node
-      children: 
-      - 
+      config:
+        loop_delay: 0.5
+        enabled: true
+        debug: true
+        cfg_test_a: hahaha
+      children: []
+    x2:
+      path: echo_node
+      config:
+        loop_delay: 0.5
+        enabled: true
+        debug: true
+        cfg_test_b: result
+      children: []
